fixed link overlap

--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,7 @@
 	text-align: center;
 }
 
-.iconGithub{
-    max-width: 48px;
-    max-height: 48px;
-    width: 48px;
-    height: 48px;
-}
-
-.header{
+.githubSvg{
 	display: flex;
 	justify-content: center;
 	margin: 0 0 30px 0;
